<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2016, 2017 Curtis Gedak

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:title="@string/big_cards"
        android:summary="@string/big_cards_desc"
        android:defaultValue="false"
        android:key="DisplayBigCards" />
    <CheckBoxPreference
        android:title="@string/display_time"
        android:summary="@string/display_time_desc"
        android:defaultValue="true"
        android:key="DisplayTime" />
    <ListPreference
        android:title="@string/auto_move"
        android:summary="@string/auto_move_desc"
        android:defaultValue="1"
        android:key="AutoMoveLevel"
        android:entries="@array/auto_move"
        android:entryValues="@array/auto_move_value" />
    <CheckBoxPreference
        android:title="@string/lock_landscape"
        android:summary="@string/lock_landscape_desc"
        android:defaultValue="false"
        android:key="LockLandscape" />
</PreferenceScreen>
